# emr-hyperneat

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml  paper-validation.yml
docs/: README.md  architecture.md  configuration.md  installation.md  reproducing-experiments.md  testing.md  writing-experiments.md
emr_hyperneat/: __init__.py  emrhyperneat.py  emrhyperneat_base.py  fitness_utils.py  multi_gpu_worker.py
emr_hyperneat/_compat/: __init__.py
emr_hyperneat/_hmr_frozen/: __init__.py  hmrhyperneat.py  hmrhyperneat_dynamic_functions.py  hmrhyperneat_dynamic_functions_aggregation.py  hmrhyperneat_neuromodulation_functions.py  hmrhyperneat_pipeline_chunking_multi_gpus.py  hmrhyperneat_unified_extended.py  hmrhyperneat_unified_extended_dynamic_functions_full.py
emr_hyperneat/tests/: conftest.py  pytest.ini  test_configuration_parsing.py  test_connection_types.py  test_data_release.py  test_dynamic_aggregation.py  test_dynamic_functions.py  test_forward_pass_modes.py  test_geometry_seeding.py  test_golden.py  test_hh_cache.py  test_hmr_frozen.py  test_isolation.py  test_multi_gpu_strategies.py  test_multi_task.py  test_neuromodulation.py  test_paper_validation.py  test_parity.py  test_smoke.py  test_substrate_building.py
papers/emr-dynamic-functions/: README.md  REPRODUCIBILITY.md
papers/emr-dynamic-functions-bio-inspired/: BENCHMARK_RESULTS.md  README.md
papers/emr-hyperneat/: README.md
papers/emr-neuromodulation/: EXPERIMENT_RESULTS.md  README.md
scripts/: fetch_results.py
(+342 files in other folders)
