[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emr-hyperneat"
version = "0.1.0"
description = "EMR-HyperNEAT: Eager Multi-Resolution HyperNEAT, GPU-accelerated adaptive-substrate neuroevolution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Romain Claret" },
]
keywords = ["GPU-acceleration", "neuroevolution", "EMR-HyperNEAT", "ES-HyperNEAT", "HyperNEAT", "NEAT", "JAX", "tensors", "evolutionary-computation", "neural-networks", "machine-learning", "artificial-intelligence", "AI"]

# Core runtime dependencies. TensorNEAT is NOT on PyPI. It is provided by the
# pinned git submodule and installed separately:
#     pip install -e third_party/tensorneat
# (see README). Versions track the environment the published experiments ran on
# (JAX 0.6.x, NumPy 1.26.x).
dependencies = [
    "jax>=0.5,<0.7",
    "jaxlib>=0.5,<0.7",
    "numpy>=1.24,<2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Statistics + figure regeneration used by the papers/ analysis scripts.
analysis = ["scipy>=1.10", "matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/RomainClaret/emr-hyperneat"

[tool.setuptools.packages.find]
include = ["emr_hyperneat*"]
exclude = ["papers*", "third_party*", "scripts*"]
